--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 pandas = "*"
 flask = "*"
 flask-sqlalchemy = "*"
-psycopg = "*"
+psycopg2 = "*"
 pylint = "*"
 gunicorn = "*"
 jinja2 = "*"
